lesson50/k8s-log-platform/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log-platform
  labels:
    istio-injection: enabled
    app.kubernetes.io/managed-by: helm
